fix overflow and add delete functionality

--- a/src/components/pattern.scss
+++ b/src/components/pattern.scss
@@ -1,6 +1,4 @@
 .pattern {
-    width: 200px;
-    height: 200px;
     background-color: #DFC5FE;
     border-radius: 6px;
     padding: 20px;
@@ -10,9 +8,34 @@
     justify-content: center;
     font-size: 22px;
     color: black;
+    width: 80%;
+    margin: 0 auto;
 
     div {
         margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        word-break: break-all;
+
+        button {
+            padding: 6px;
+            width: 70px;
+            border-radius: 6px;
+            border: none;
+            font-size: 14px;
+            background-color: #0A2F54;
+            color: white;
+            text-transform: uppercase;
+            margin-top: 8px;
+            cursor: pointer;
+        }
+    }
+
+    .pattern-label {
+        color: #0A2F54;
+        font-weight: 600;
+        font-size: 26px;
     }
 }
 
