--- a/src/pages/patterns.scss
+++ b/src/pages/patterns.scss
@@ -38,6 +38,8 @@
     .right {
         width: 50%;
         margin-top: 30px;
+        overflow-y: auto;
+        padding-bottom: 30px;
 
         .patterns-title {
             font-size: 20px;
